BAU: update URL method, as it is deprecated in Java 20