@@ -13,7 +13,8 @@ import uk.gov.di.orchestration.shared.entity.ValidClaims;
 import uk.gov.di.orchestration.shared.entity.ValidScopes;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.KeyFactory;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Arrays;
@@ -210,9 +211,9 @@ public class ClientConfigValidationService {
     private boolean areUrisValid(List<String> uris) {
         try {
             for (String uri : uris) {
-                new URL(uri);
+                new URI(uri).toURL();
             }
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException | MalformedURLException e) {
             return false;
         }
         return true;
